--- a/staging/script.xsqueeze/changelog.txt
+++ b/staging/script.xsqueeze/changelog.txt
@@ -1,3 +1,8 @@
+V1.1.1
+- Settings overhaul with better help
+- Auto discover & set IP for LMS
+- Auto discover & set audio outputs
+
 V1.0.9
 - Attempted bugfix for 1.0.8 squeezelite switches
 
