Kodi path fix and user/pass support for album artwork

--- a/staging/plugin.program.xsqueezechooser/changelog.txt
+++ b/staging/plugin.program.xsqueezechooser/changelog.txt
@@ -1,3 +1,6 @@
+v0.1.6
+- Fixed missing import issue that shows up only with kodi/helix 
+
 v0.0.2
 - New chooser modes - radios, favourites, years etc. 
 
