Added Confluence revamp to Gotham skin

--- a/staging/skin.confluence.bossanova808.gotham/changelog.txt
+++ b/staging/skin.confluence.bossanova808.gotham/changelog.txt
@@ -1,7 +1,10 @@
-B]0.1.2[/B]
+[B]0.1.3[/B]
+- Added Universal Textures
+
+[B]0.1.2[/B]
 - Sync with Gotham Final
-[
-B]0.1.0[/B]
+
+[B]0.1.0[/B]
 - Re-sync Gotham Beta1
 
 [B]0.0.3[/B]
