--- a/staging/skin.confluence.bossanova808.helix/language/Hebrew/strings.po
+++ b/staging/skin.confluence.bossanova808.helix/language/Hebrew/strings.po
@@ -26,11 +26,11 @@ msgstr "אפשרויות חשמל"
 
 msgctxt "#31004"
 msgid "Working..."
-msgstr "עובד..."
+msgstr "עסוק..."
 
 msgctxt "#31005"
 msgid "Hide Information"
-msgstr "הסתרת פרטים"
+msgstr "הסתר פרטים"
 
 msgctxt "#31006"
 msgid "View Options"
@@ -42,7 +42,7 @@ msgstr "מסך מלא"
 
 msgctxt "#31009"
 msgid "Total Duration"
-msgstr "סה\"כ משך זמן"
+msgstr "אורך כולל"
 
 msgctxt "#31022"
 msgid "Music - Files"
@@ -182,7 +182,7 @@ msgstr "אפשרויות שונות"
 
 msgctxt "#31107"
 msgid "Hide Flagging read from video filenames [COLOR=grey3](Blu-ray, HD-DVD)[/COLOR]"
-msgstr "הסתר סימול \"נצפה\" משמות קבצי וידאו [COLOR=grey3](Blu-ray, HD-DVD)[/COLOR]"
+msgstr "הסתר סימון \"נצפה\" משמות קבצי וידאו [COLOR=grey3](Blu-ray, HD-DVD)[/COLOR]"
 
 msgctxt "#31108"
 msgid "Hide Main Menu Buttons"
@@ -254,7 +254,7 @@ msgstr "תת תפריט וידאו במסך הבית"
 
 msgctxt "#31135"
 msgid "Home Page Music Sub-menu"
-msgstr "תת תפריט מוסיקה במסך הבית"
+msgstr "תת תפריט מוזיקה במסך הבית"
 
 msgctxt "#31136"
 msgid "Home Page Pictures Sub-menu"
@@ -310,7 +310,7 @@ msgstr "ספק מידע"
 
 msgctxt "#31307"
 msgid "Hide Fanart"
-msgstr "הסתרת פאנארט"
+msgstr "הסתר פאנארט"
 
 msgctxt "#31308"
 msgid "Movie Details"
@@ -318,7 +318,7 @@ msgstr "פרטי סרט"
 
 msgctxt "#31309"
 msgid "Memory Used:"
-msgstr "זכרון מנוצל:"
+msgstr "זכרון בשימוש:"
 
 msgctxt "#31310"
 msgid "Track Number"
@@ -334,7 +334,7 @@ msgstr "סקרייפר נוכחי"
 
 msgctxt "#31313"
 msgid "Choose a Scraper"
-msgstr "יש לבחור סקרייפר"
+msgstr "בחירת סקרייפר"
 
 msgctxt "#31314"
 msgid "Content Scanning Options"
@@ -426,11 +426,11 @@ msgstr "פעיל"
 
 msgctxt "#31390"
 msgid "Skin default"
-msgstr "ברירת מחדל המעטפת"
+msgstr "ברירת מחדל של המעטפת"
 
 msgctxt "#31391"
 msgid "Skin default with no Caps"
-msgstr "ברירת מחדל המעטפת ללא רישיות"
+msgstr "ברירת מחדל של המעטפת ללא רישיות"
 
 msgctxt "#31392"
 msgid "Arial based"
@@ -438,7 +438,7 @@ msgstr "מבוסס Arial"
 
 msgctxt "#31400"
 msgid "[B]CONFIGURE APPEARANCE SETTINGS[/B][CR][CR]Change the skin · Set language and region · Change file listing options[CR]Set up a screensaver"
-msgstr "[B]שינוי הגדרות מראה[/B][CR][CR]בחירה והגדרת מעטפת · בחירת שפה ואזור זמן · שינוי אפשרויות תצוגת קבצים[CR]הגדרת שומר מסך"
+msgstr "[B]שינוי הגדרות מראה[/B][CR][CR]החלפת מעטפת · בחירת שפה ואזור זמן · שינוי אפשרויות תצוגת קבצים[CR]הגדרת שומר מסך"
 
 msgctxt "#31401"
 msgid "[B]CONFIGURE VIDEO SETTINGS[/B][CR][CR]Manage your video library · Set video playback options · Change video listing options[CR]Set subtitle fonts"
@@ -446,7 +446,7 @@ msgstr "[B]שינוי הגדרות וידאו[/B][CR][CR]ניהול ספריית
 
 msgctxt "#31402"
 msgid "[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library · Set music playback options · Change music listing options[CR]Setup song submission · Set karaoke options"
-msgstr "[B]שינוי הגדרות מוסיקה[/B][CR][CR]ניהול ספריית המוסיקה · קביעת העדפות ניגון מוזיקה · שינוי אפשרויות תצוגת קבצי מוסיקה[CR]הגדרת אפשרויות קריוקי"
+msgstr "[B]שינוי הגדרות מוזיקה[/B][CR][CR]ניהול ספריית המוזיקה · קביעת העדפות ניגון מוזיקה · שינוי אפשרויות תצוגת קבצי מוזיקה[CR]הגדרת אפשרויות קריוקי"
 
 msgctxt "#31403"
 msgid "[B]CONFIGURE PICTURE SETTINGS[/B][CR][CR]Set picture listing options · Configure slideshows"
@@ -490,15 +490,15 @@ msgstr "כניסה"
 
 msgctxt "#31421"
 msgid "Select your Kodi user Profile[CR]to login and continue"
-msgstr "יש לבחור פרופיל משתמש[CR]לשם כניסה ל־Kodi"
+msgstr "יש לבחור חשבון משתמש Kodi[CR]להתחברות והמשך"
 
 msgctxt "#31422"
 msgid "Show or hide the login screen at startup."
-msgstr "הצג או הסתר מסך התחברות בעת ההפעלה."
+msgstr "הצג או הסתר מסך כניסה בעת ההפעלה."
 
 msgctxt "#31423"
 msgid "Select the profile that will be used at startup when the login screen is disabled."
-msgstr "יש לבחור משתמש שיחובר כברירת מחדל בעת ההפעלה כאשר מסך הכניסה מנורטל."
+msgstr "יש לבחור משתמש שיחובר כברירת מחדל בעת ההפעלה כאשר מסך כניסה מנוטרל."
 
 msgctxt "#31501"
 msgid "Scheduled Time"
@@ -542,7 +542,7 @@ msgstr "תחזית ל־36 שעות"
 
 msgctxt "#31902"
 msgid "Hourly Forecast"
-msgstr "תחזית לשעה הקרובה"
+msgstr "תחזית לפי שעה"
 
 msgctxt "#31903"
 msgid "Weekend Forecast"
