--- a/staging/script.module.xsqueezecommon/changelog.txt
+++ b/staging/script.module.xsqueezecommon/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 0.1.6[/B]
+- Update to b808 common 0.1.6
+
 [B]Version 0.1.4[/B]
 - Unicode fixes - if a character causes a choke, strip it out/sub in ascii default
 
