--- a/staging/plugin.program.xsqueezechooser/changelog.txt
+++ b/staging/plugin.program.xsqueezechooser/changelog.txt
@@ -1,3 +1,8 @@
+v0.1.8
+- Updated to b808common 0.1.8
+- Bugfixes to App browsing
+- Radios still not ok 
+
 v0.1.7
 - Updated to b808common 0.1.6 
 
