Modified settings and CONSTANTS.PY ind CAPITALs
I still haven´t figured out how to rebase. But I´ll keep on trying it.
Sorry for all the useless commits. It is my first time here on Github
so I´m not very experienced. I was just playing around with the github
client on my mac and was wondering how it interacts with the web
repository. I´m really sorry for the confusion.

I changed settings.xml which means that I added a master setting to
enable the hdmi support in general. I also switched all default hdmi
settings to false so that no hdmi commands will be send except someone
has enabled the cec support.

Are you fine with the line endings now? I think there are only 5 files
changed in comparison to your master branch. Can you now see all the
changes which I have made?

--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -71,6 +71,7 @@
 	<string id="19926">Turn off TV?</string>
         <string id="19927">Adjust volume of AV-Receiver?</string>
         <string id="19928">Factor to adjust volume sensitivity of AV-Receiver</string>
+        <string id="19929">HDMI CEC Support</string>
 
 </strings>
 
