--- a/staging/skin.confluence.bossanova808.helix/changelog.txt
+++ b/staging/skin.confluence.bossanova808.helix/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.1.3[/B]
+
+Updated to 4.0.1 of Universal Revamped theme
+
 [B]0.1.2[/B]
 
 Updated MyWeather.xml to include pressure, fire danger and wind gust support
