Sync skin with jarvis release

--- a/staging/skin.confluence.bossanova808.jarvis/language/resource.language.ko_kr/strings.po
+++ b/staging/skin.confluence.bossanova808.jarvis/language/resource.language.ko_kr/strings.po
@@ -220,6 +220,10 @@ msgctxt "#31119"
 msgid "Hide background fanart"
 msgstr "배경 팬아트 숨김"
 
+msgctxt "#31122"
+msgid "Hide EPG if RDS is present on channel window"
+msgstr "채널창에서 RDS 가 있으면 EPG 숨김"
+
 msgctxt "#31124"
 msgid "Show background \"Now playing\" video"
 msgstr "배경에 \"지금 재생 중\" 비디오 보기"
@@ -227,14 +231,6 @@ msgstr "배경에 \"지금 재생 중\" 비디오 보기"
 msgctxt "#31125"
 msgid "Show background \"Now playing\" visualisation"
 msgstr "배경에 \"지금 재생 중\" 시각화 보기"
-
-msgctxt "#31126"
-msgid "Play TV theme songs in video library (TvTunes add-on)"
-msgstr "라이브러리 모드에서 TV 주제음악 재생 (TvTunes 애드온)"
-
-msgctxt "#31127"
-msgid "TvTunes"
-msgstr "TvTunes"
 
 msgctxt "#31128"
 msgid "Lyrics"
@@ -352,10 +348,6 @@ msgctxt "#31320"
 msgid "Last logged in"
 msgstr "마지막 로그인"
 
-msgctxt "#31321"
-msgid "Karaoke song selector"
-msgstr "노래방 노래 선택기"
-
 msgctxt "#31322"
 msgid "Aired"
 msgstr "방영"
@@ -445,8 +437,8 @@ msgid "[B]CONFIGURE VIDEO SETTINGS[/B][CR][CR]Manage your video library · Set v
 msgstr "[B]비디오 설정[/B][CR][CR]비디오 라이브러리 관리 · 비디오 재생 옵션 변경 · 비디오 목록 옵션 변경[CR]자막 글꼴 설정"
 
 msgctxt "#31402"
-msgid "[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library · Set music playback options · Change music listing options[CR]Setup song submission · Set karaoke options"
-msgstr "[B]음악 설정[/B][CR][CR]음악 라이브러리 관리 · 음악 재생 옵션 변경 · 음악 목록 옵션 변경[CR]노래 전송 설정 · 노래방 옵션 설정"
+msgid "[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library · Set music playback options · Change music listing options[CR]Setup song submission"
+msgstr "[B]음악 설정[/B][CR][CR]음악 라이브러리 관리 · 음악 재생 옵션 변경 · 음악 목록 옵션 변경[CR]노래 전송 설정"
 
 msgctxt "#31403"
 msgid "[B]CONFIGURE PICTURE SETTINGS[/B][CR][CR]Set picture listing options · Configure slideshow"
