--- a/staging/skin.confluence.bossanova808.jarvis/language/resource.language.ro_ro/strings.po
+++ b/staging/skin.confluence.bossanova808.jarvis/language/resource.language.ro_ro/strings.po
@@ -42,7 +42,7 @@ msgstr "Ecran complet"
 
 msgctxt "#31009"
 msgid "Total duration"
-msgstr "Durată totală"
+msgstr "Durata totală"
 
 msgctxt "#31022"
 msgid "Music - Files"
@@ -118,7 +118,7 @@ msgstr "DERULARE"
 
 msgctxt "#31048"
 msgid "Visualisation presets"
-msgstr "Predefiniri vizualizare"
+msgstr "Prestabiliri vizualizare"
 
 msgctxt "#31049"
 msgid "End time"
@@ -220,6 +220,10 @@ msgctxt "#31119"
 msgid "Hide background fanart"
 msgstr "Ascunde creația artistică de pe fundal"
 
+msgctxt "#31122"
+msgid "Hide EPG if RDS is present on channel window"
+msgstr "Ascunde EPG dacă RDS este prezent în fereastra canal"
+
 msgctxt "#31124"
 msgid "Show background \"Now playing\" video"
 msgstr "Arată fundal video „Acum în redare”"
@@ -227,14 +231,6 @@ msgstr "Arată fundal video „Acum în redare”"
 msgctxt "#31125"
 msgid "Show background \"Now playing\" visualisation"
 msgstr "Arată vizualizare „Acum în redare” pe fundal"
-
-msgctxt "#31126"
-msgid "Play TV theme songs in video library (TvTunes add-on)"
-msgstr "Redă cântece temă TV în mediateca video (supliment TvTunes)"
-
-msgctxt "#31127"
-msgid "TvTunes"
-msgstr "TvTunes"
 
 msgctxt "#31128"
 msgid "Lyrics"
@@ -270,7 +266,7 @@ msgstr "Meniu video"
 
 msgctxt "#31142"
 msgid "Settings level"
-msgstr "Nivel setări"
+msgstr "Nivel stabiliri"
 
 msgctxt "#31200"
 msgid "Shortcuts"
@@ -342,7 +338,7 @@ msgstr "Opțiuni scanare conținut"
 
 msgctxt "#31317"
 msgid "Set fanart path"
-msgstr "Definire cale creație artistică"
+msgstr "Stabilire cale creație artistică"
 
 msgctxt "#31319"
 msgid "Selected profile"
@@ -351,10 +347,6 @@ msgstr "Profil selectat"
 msgctxt "#31320"
 msgid "Last logged in"
 msgstr "Ultimul autentificat"
-
-msgctxt "#31321"
-msgid "Karaoke song selector"
-msgstr "Selector cântece karaoke"
 
 msgctxt "#31322"
 msgid "Aired"
@@ -378,7 +370,7 @@ msgstr "Adăugate recent"
 
 msgctxt "#31329"
 msgid "[B]Timer set![/B] [COLOR=grey2] - System auto shutdown in[/COLOR]"
-msgstr "[B]Planificare închidere activată![/B] [COLOR=grey2] Închidere sistem în[/COLOR]"
+msgstr "[B]Planificare oprire activată![/B] [COLOR=grey2] Sistemul va fi oprit automat în[/COLOR]"
 
 msgctxt "#31330"
 msgid "Click button to play[CR][CR]movie trailer"
@@ -410,7 +402,7 @@ msgstr "Meniu film"
 
 msgctxt "#31356"
 msgid "Download subtitles"
-msgstr "Descarcă subtitrări"
+msgstr "Descarcă subtitluri"
 
 msgctxt "#31360"
 msgid "Watch as 2D"
@@ -438,39 +430,39 @@ msgstr "Cu Arial la bază"
 
 msgctxt "#31400"
 msgid "[B]CONFIGURE APPEARANCE SETTINGS[/B][CR][CR]Change the skin · Set language and region · Change file listing options[CR]Set up a screensaver"
-msgstr "[B]CONFIGURAȚI SETĂRI DE ASPECT[/B][CR][CR]Schimbați costumul · Alegeți limba și regiunea · Modificați opțiunile de listare a fișierelor[CR]Alegeți un protector ecran"
+msgstr "[B]CONFIGURAȚI STABILIRI ASPECT[/B][CR][CR]Schimbați costumul · Alegeți limba și regiunea · Modificați opțiunile de listare a fișierelor[CR]Alegeți un protector de ecran"
 
 msgctxt "#31401"
 msgid "[B]CONFIGURE VIDEO SETTINGS[/B][CR][CR]Manage your video library · Set video playback options · Change video listing options[CR]Set subtitle fonts"
-msgstr "[B]CONFIGURAȚI SETĂRI VIDEO[/B][CR][CR]Administrați  mediateca video · Configurați opțiuni redare video · Modificați opțiuni afișare liste de fișiere video[CR]Alegeți font subtitrare"
+msgstr "[B]CONFIGURAȚI STABILIRI VIDEO[/B][CR][CR]Administrați  mediateca video · Configurați opțiuni redare video · Modificați opțiuni afișare liste de fișiere video[CR]Alegeți font subtitlu"
 
 msgctxt "#31402"
-msgid "[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library · Set music playback options · Change music listing options[CR]Setup song submission · Set karaoke options"
-msgstr "[B]CONFIGURAȚI SETĂRI MUZICĂ[/B][CR][CR]Administrați mediateca audio · Setați opțiuni redare muzică · Modificați opțiuni afișare liste de fișiere audio[CR]Pregătiți trimitere cântec · Configurați opțiuni karaoke"
+msgid "[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library · Set music playback options · Change music listing options[CR]Setup song submission"
+msgstr "[B]CONFIGURAȚI STABILIRI MUZICĂ[/B][CR][CR]Administrați mediateca audio · Stabiliți opțiunile de redare a muzicii · Schimbați opțiunile de afișare listă ale muzicii[CR]Configurați trimitere cântece"
 
 msgctxt "#31403"
 msgid "[B]CONFIGURE PICTURE SETTINGS[/B][CR][CR]Set picture listing options · Configure slideshow"
-msgstr "[B]CONFIGURAȚI SETĂRI IMAGINE[/B][CR][CR]Modificați opțiuni afișare liste de imagini · Configurați diaporama"
+msgstr "[B]CONFIGURAȚI STABILIRI IMAGINE[/B][CR][CR]Modificați opțiuni afișare liste de imagini · Configurați diaporama"
 
 msgctxt "#31404"
 msgid "[B]CONFIGURE WEATHER SETTINGS[/B][CR][CR]Set various cities to collect weather information"
-msgstr "[B]CONFIGURAȚI SETĂRI METEO[/B][CR][CR]Alegeți orașe diverse pentru care se obțin informații meteo"
+msgstr "[B]CONFIGURAȚI STABILIRI METEO[/B][CR][CR]Alegeți orașe diverse pentru care se obțin informații meteo"
 
 msgctxt "#31406"
 msgid "[B]CONFIGURE SYSTEM SETTINGS[/B][CR][CR]Setup and calibrate displays · Configure audio output · Setup remote controls[CR]Set power saving options · Enable debugging · Setup master lock"
-msgstr "[B]CONFIGURAȚI SETĂRI SISTEM[/B][CR][CR]Configurați și calibrați ecrane · Configurați ieșirea audio · Instalați telecomenzi[CR]Alegeți opțiuni de economisire energie · Activați depanarea · Configurați blocarea principală"
+msgstr "[B]CONFIGURAȚI STABILIRI SISTEM[/B][CR][CR]Configurați și calibrați ecrane · Configurați ieșirea audio · Instalați telecomenzi[CR]Alegeți opțiuni de economisire energie · Activați depanarea · Configurați blocarea principală"
 
 msgctxt "#31408"
 msgid "[B]CONFIGURE ADD-ONS[/B][CR][CR]Manage your installed add-ons · Browse for and install add-ons from kodi.tv[CR]Modify add-on settings"
-msgstr "[B]CONFIGURAȚI SUPLIMENTE[/B][CR][CR]Administrați suplimentele instalate · Răsfoiți și instalați suplimente de la kodi.tv[CR]Modificați setările suplimentelor"
+msgstr "[B]CONFIGURAȚI SUPLIMENTE[/B][CR][CR]Administrați suplimentele instalate · Răsfoiți și instalați suplimente de la kodi.tv[CR]Modificați stabilirile suplimentelor"
 
 msgctxt "#31409"
 msgid "[B]CONFIGURE TV SETTINGS[/B][CR][CR]Change full screen info · Manage EPG data settings"
-msgstr "[B]CONFIGURAȚI SETĂRI TELEVIZIUNE ÎN DIRECT[/B][CR][CR]Schimbați informațiile afișate pe ecran în modul ecran complet · Gestionați setări date ghid tv"
+msgstr "[B]CONFIGURAȚI STABILIRI TELEVIZIUNE ÎN DIRECT[/B][CR][CR]Schimbați informațiile afișate pe ecran în modul ecran complet · Gestionați stabiliri date ghid tv"
 
 msgctxt "#31410"
 msgid "[B]CONFIGURE SERVICE SETTINGS[/B][CR][CR]Setup control of Kodi via UPnP and HTTP · Configure file sharing[CR]Enable Zeroconf · Configure AirPlay"
-msgstr "[B]CONFIGURARAȚI SETĂRI SERVICII[/B][CR][CR]Stabiliți controului Kodi prin UPnP și HTTP · Configurarați partajarea de fișiere[CR]Activați Zeroconf · Configurați AirPlay"
+msgstr "[B]CONFIGURARAȚI STABILIRI SERVICII[/B][CR][CR]Configurați controului Kodi prin UPnP și HTTP · Configurarați partajarea de fișiere[CR]Activați Zeroconf · Configurați AirPlay"
 
 msgctxt "#31411"
 msgid "First run help..."
@@ -482,7 +474,7 @@ msgstr "Acestă săgeată indică prezența unui meniu în partea stângă a fer
 
 msgctxt "#31413"
 msgid "Local subtitle available"
-msgstr "Este disponibilă o subtitrare locală"
+msgstr "Este disponibil un subtitlu local"
 
 msgctxt "#31420"
 msgid "Login"
@@ -530,7 +522,7 @@ msgstr "Grup de canale"
 
 msgctxt "#31510"
 msgid "Timer set"
-msgstr "Cronometru pornit"
+msgstr "Cronometru stabilit"
 
 msgctxt "#31511"
 msgid "Channel options"
