--- a/staging/script.xsqueeze/changelog.txt
+++ b/staging/script.xsqueeze/changelog.txt
@@ -1,3 +1,6 @@
+V1.2.4
+- Restore compatibility back to Gotham
+
 V1.2.2
 - Slightly refactor when the startup pause occurs, thank to newan for the feedback/testing
 
