Krypton skin 0.0.5 now using universal themes instead of replacing the main textures

--- a/staging/skin.confluence.bossanova808.krypton/changelog.txt
+++ b/staging/skin.confluence.bossanova808.krypton/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.0.5[/B]
+
+Move to using the universal themes instead, but with our bg pic
+
 [B]0.0.4[/B]
 
 Sync With Kody 17 release Confluence 3.0.39
