--- a/staging/skin.confluence.bossanova808.krypton/changelog.txt
+++ b/staging/skin.confluence.bossanova808.krypton/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.0.6[/B]
+
+Fix extra line in left panel of MyWeather.mxl
+
 [B]0.0.5[/B]
 
 Move to using the universal themes instead, but with our bg pic
