Update repo links to https...release repo 0.2.0

--- a/staging/repository.bossanova808/changelog.txt
+++ b/staging/repository.bossanova808/changelog.txt
@@ -1,4 +1,7 @@
-[B]Version 0.17[/B]
+[B]Version 0.2.0[/B]
+- Update github links to https...
+
+[B]Version 0.1.7[/B]
 - Moved rep to github so everything is nicely in one place
 
 [B]Version 0.1[/B]
