Use new git based approach to sync Confluence and remove all but most necessary changes.

--- a/staging/skin.confluence.bossanova808.leia/language/resource.language.en_gb/strings.po
+++ b/staging/skin.confluence.bossanova808.leia/language/resource.language.en_gb/strings.po
@@ -92,7 +92,11 @@ msgctxt "#31016"
 msgid "Elapsed time"
 msgstr ""
 
-#empty strings from id 31017 to 31022
+msgctxt "#31017"
+msgid "Unavailable"
+msgstr ""
+
+#empty strings from id 31018 to 31022
 
 msgctxt "#31023"
 msgid "Playing"
