--- a/staging/skin.confluence.bossanova808.leia/language/resource.language.af_za/strings.po
+++ b/staging/skin.confluence.bossanova808.leia/language/resource.language.af_za/strings.po
@@ -84,6 +84,10 @@ msgctxt "#31016"
 msgid "Elapsed time"
 msgstr "Tyd verloop"
 
+msgctxt "#31017"
+msgid "Unavailable"
+msgstr "Onbeskikbaar"
+
 msgctxt "#31023"
 msgid "Playing"
 msgstr "Speel"
@@ -236,6 +240,18 @@ msgctxt "#31112"
 msgid "Options"
 msgstr "Opsies"
 
+msgctxt "#31113"
+msgid "Background path Master:"
+msgstr "Agtergrond pad Meester:"
+
+msgctxt "#31114"
+msgid "System"
+msgstr "Stelsel"
+
+msgctxt "#31115"
+msgid "Main button playlists"
+msgstr "Hoof knoppie speellyste"
+
 msgctxt "#31116"
 msgid "Show recently added albums"
 msgstr "Wys onlangs bygevoegde albums"
@@ -300,6 +316,18 @@ msgctxt "#31142"
 msgid "Settings level"
 msgstr "Verstellings vlak"
 
+msgctxt "#31143"
+msgid "Use"
+msgstr "Gebruik"
+
+msgctxt "#31144"
+msgid "playlist"
+msgstr "speellys"
+
+msgctxt "#31145"
+msgid "playlist path"
+msgstr "speellys pad"
+
 msgctxt "#31200"
 msgid "Shortcuts"
 msgstr "Kortpaaie"
@@ -323,6 +351,10 @@ msgstr "Vind meer items"
 msgctxt "#31208"
 msgid "Upcoming episodes"
 msgstr "Opkomende episodes"
+
+msgctxt "#31209"
+msgid "Hide Master profile main menu buttons"
+msgstr "Versteek Meester profiel hoof kieslys knoppies"
 
 msgctxt "#31300"
 msgid "Current temperature"
