--- a/staging/skin.confluence.bossanova808.leia/language/resource.language.en_us/strings.po
+++ b/staging/skin.confluence.bossanova808.leia/language/resource.language.en_us/strings.po
@@ -84,6 +84,10 @@ msgctxt "#31016"
 msgid "Elapsed time"
 msgstr "Elapsed time"
 
+msgctxt "#31017"
+msgid "Unavailable"
+msgstr "Unavailable"
+
 msgctxt "#31023"
 msgid "Playing"
 msgstr "Playing"
@@ -236,6 +240,18 @@ msgctxt "#31112"
 msgid "Options"
 msgstr "Options"
 
+msgctxt "#31113"
+msgid "Background path Master:"
+msgstr "Background path Master:"
+
+msgctxt "#31114"
+msgid "System"
+msgstr "System"
+
+msgctxt "#31115"
+msgid "Main button playlists"
+msgstr "Main button playlists"
+
 msgctxt "#31116"
 msgid "Show recently added albums"
 msgstr "Show recently added albums"
@@ -300,6 +316,18 @@ msgctxt "#31142"
 msgid "Settings level"
 msgstr "Settings level"
 
+msgctxt "#31143"
+msgid "Use"
+msgstr "Use"
+
+msgctxt "#31144"
+msgid "playlist"
+msgstr "playlist"
+
+msgctxt "#31145"
+msgid "playlist path"
+msgstr "playlist path"
+
 msgctxt "#31200"
 msgid "Shortcuts"
 msgstr "Shortcuts"
@@ -323,6 +351,10 @@ msgstr "Find more items"
 msgctxt "#31208"
 msgid "Upcoming episodes"
 msgstr "Upcoming episodes"
+
+msgctxt "#31209"
+msgid "Hide Master profile main menu buttons"
+msgstr "Hide Master profile main menu buttons"
 
 msgctxt "#31300"
 msgid "Current temperature"
