--- a/staging/skin.confluence.bossanova808.leia/language/resource.language.nl_nl/strings.po
+++ b/staging/skin.confluence.bossanova808.leia/language/resource.language.nl_nl/strings.po
@@ -84,6 +84,10 @@ msgctxt "#31016"
 msgid "Elapsed time"
 msgstr "Verstreken tijd"
 
+msgctxt "#31017"
+msgid "Unavailable"
+msgstr "Niet beschikbaar"
+
 msgctxt "#31023"
 msgid "Playing"
 msgstr "Afspelen"
@@ -236,6 +240,18 @@ msgctxt "#31112"
 msgid "Options"
 msgstr "Opties"
 
+msgctxt "#31113"
+msgid "Background path Master:"
+msgstr "Master achtergrondpad:"
+
+msgctxt "#31114"
+msgid "System"
+msgstr "Systeem"
+
+msgctxt "#31115"
+msgid "Main button playlists"
+msgstr "Hoofdknop afspeellijsten"
+
 msgctxt "#31116"
 msgid "Show recently added albums"
 msgstr "Toon recent toegevoegde albums"
@@ -300,6 +316,18 @@ msgctxt "#31142"
 msgid "Settings level"
 msgstr "Instellingsniveau"
 
+msgctxt "#31143"
+msgid "Use"
+msgstr "Gebruik"
+
+msgctxt "#31144"
+msgid "playlist"
+msgstr "afspeellijst"
+
+msgctxt "#31145"
+msgid "playlist path"
+msgstr "afspeellijstpad"
+
 msgctxt "#31200"
 msgid "Shortcuts"
 msgstr "Snelkoppelingen"
@@ -323,6 +351,10 @@ msgstr "Vind meer items"
 msgctxt "#31208"
 msgid "Upcoming episodes"
 msgstr "Aankomende afleveringen"
+
+msgctxt "#31209"
+msgid "Hide Master profile main menu buttons"
+msgstr "Verberg hoofdmenutoetsen van het masterprofiel"
 
 msgctxt "#31300"
 msgid "Current temperature"
