--- a/staging/skin.confluence.bossanova808.leia/language/resource.language.pt_br/strings.po
+++ b/staging/skin.confluence.bossanova808.leia/language/resource.language.pt_br/strings.po
@@ -84,6 +84,10 @@ msgctxt "#31016"
 msgid "Elapsed time"
 msgstr "Tempo decorrido"
 
+msgctxt "#31017"
+msgid "Unavailable"
+msgstr "Indisponível"
+
 msgctxt "#31023"
 msgid "Playing"
 msgstr "Reproduzindo"
@@ -236,6 +240,18 @@ msgctxt "#31112"
 msgid "Options"
 msgstr "Opções"
 
+msgctxt "#31113"
+msgid "Background path Master:"
+msgstr "Caminho principal imagem de fundo:"
+
+msgctxt "#31114"
+msgid "System"
+msgstr "Sistema"
+
+msgctxt "#31115"
+msgid "Main button playlists"
+msgstr "Botão principal lista de reprodução"
+
 msgctxt "#31116"
 msgid "Show recently added albums"
 msgstr "Mostrar álbuns adicionados recentemente"
@@ -300,6 +316,18 @@ msgctxt "#31142"
 msgid "Settings level"
 msgstr "Níveis de Ajustes"
 
+msgctxt "#31143"
+msgid "Use"
+msgstr "Usar"
+
+msgctxt "#31144"
+msgid "playlist"
+msgstr "lista de reprodução"
+
+msgctxt "#31145"
+msgid "playlist path"
+msgstr "caminho para lista de reprodução"
+
 msgctxt "#31200"
 msgid "Shortcuts"
 msgstr "Atalhos"
@@ -323,6 +351,10 @@ msgstr "Procurar mais itens"
 msgctxt "#31208"
 msgid "Upcoming episodes"
 msgstr "Próximos episódios"
+
+msgctxt "#31209"
+msgid "Hide Master profile main menu buttons"
+msgstr "Ocultar botões do menu principal do perfil principal"
 
 msgctxt "#31300"
 msgid "Current temperature"
