--- a/staging/skin.confluence.bossanova808.leia/language/resource.language.pt_pt/strings.po
+++ b/staging/skin.confluence.bossanova808.leia/language/resource.language.pt_pt/strings.po
@@ -20,6 +20,14 @@ msgctxt "#31000"
 msgid "Change your"
 msgstr "Alterar"
 
+msgctxt "#31001"
+msgid "GAMES"
+msgstr "JOGOS"
+
+msgctxt "#31002"
+msgid "[B]GAME SETTINGS[/B][CR][CR]Configure rewind support & options ·  Configure keyboard use and number of keyboard players"
+msgstr "[B]DEFINIÇÕES DE JOGO[/B][CR][CR]Configure o suporte de retrocesso e opções ·  Configure o uso do teclado e número de jogadores num teclado"
+
 msgctxt "#31003"
 msgid "Power options"
 msgstr "Opções de energia"
@@ -67,6 +75,18 @@ msgstr "Informação do processo de áudio"
 msgctxt "#31014"
 msgid "Memory used"
 msgstr "Memória usada"
+
+msgctxt "#31015"
+msgid "Minute"
+msgstr "Minuto"
+
+msgctxt "#31016"
+msgid "Elapsed time"
+msgstr "Tempo decorrido"
+
+msgctxt "#31017"
+msgid "Unavailable"
+msgstr "Indisponível"
 
 msgctxt "#31023"
 msgid "Playing"
@@ -220,6 +240,18 @@ msgctxt "#31112"
 msgid "Options"
 msgstr "Opções"
 
+msgctxt "#31113"
+msgid "Background path Master:"
+msgstr "Caminho preferido de fundo:"
+
+msgctxt "#31114"
+msgid "System"
+msgstr "Sistema"
+
+msgctxt "#31115"
+msgid "Main button playlists"
+msgstr "Botão de listas de reprodução"
+
 msgctxt "#31116"
 msgid "Show recently added albums"
 msgstr "Mostrar os álbuns adicionados recentemente"
@@ -228,9 +260,17 @@ msgctxt "#31117"
 msgid "Show recently added videos"
 msgstr "Mostrar os vídeos adicionados recentemente"
 
+msgctxt "#31118"
+msgid "Home page \"Add-ons\" submenu"
+msgstr "Submenu \"Add-ons\" da página inicial"
+
 msgctxt "#31119"
 msgid "Hide background fanart"
 msgstr "Ocultar fanart de fundo"
+
+msgctxt "#31120"
+msgid "Home page \"Games\" submenu"
+msgstr "Submenu \"Jogos\" da página inicial"
 
 msgctxt "#31122"
 msgid "Hide EPG if RDS is present on channel window"
@@ -276,6 +316,18 @@ msgctxt "#31142"
 msgid "Settings level"
 msgstr "Nível de configuração"
 
+msgctxt "#31143"
+msgid "Use"
+msgstr "Utilizar"
+
+msgctxt "#31144"
+msgid "playlist"
+msgstr "lista de reprodução"
+
+msgctxt "#31145"
+msgid "playlist path"
+msgstr "caminho da lista de reprodução"
+
 msgctxt "#31200"
 msgid "Shortcuts"
 msgstr "Atalhos"
@@ -299,6 +351,10 @@ msgstr "Encontrar mais itens"
 msgctxt "#31208"
 msgid "Upcoming episodes"
 msgstr "Próximos episódios"
+
+msgctxt "#31209"
+msgid "Hide Master profile main menu buttons"
+msgstr "Ocultar botões do menu principal no perfil Master"
 
 msgctxt "#31300"
 msgid "Current temperature"
@@ -560,6 +616,10 @@ msgctxt "#31956"
 msgid "MUSIC"
 msgstr "MÚSICA"
 
+msgctxt "#31957"
+msgid "ADD-ONS"
+msgstr "ADD-ONS"
+
 msgctxt "#31958"
 msgid "PLAY DISC"
 msgstr "REPRODUZIR DISCO"
@@ -576,6 +636,14 @@ msgctxt "#31961"
 msgid "Timeshift"
 msgstr "Ver Mais Tarde"
 
+msgctxt "#31962"
+msgid "Choose kind of profile identification"
+msgstr "Escolha tipo de identificação do perfil"
+
 msgctxt "#31963"
 msgid "Profile name"
 msgstr "Nome do perfil"
+
+msgctxt "#31964"
+msgid "Profile avatar"
+msgstr "Avatar do perfil"
