Finish off skin patcher to ready-for-testing point

--- a/staging/script.ozweather-skinpatcher/resources/language/resource.language.en_gb/strings.po
+++ b/staging/script.ozweather-skinpatcher/resources/language/resource.language.en_gb/strings.po
@@ -26,5 +26,5 @@ msgid "Successfully patch skin.confluence & created backup files"
 msgstr ""
 
 msgctxt "#32003"
-msgid "Also patch seekbar.xml to show key info & radar when video paused?"
+msgid "(Confluence only) Also patch VideoFullScreen.xml to show key info & radar with video info?"
 msgstr ""
