--- a/staging/script.ozweather-skinpatcher/changelog.txt
+++ b/staging/script.ozweather-skinpatcher/changelog.txt
@@ -1,2 +1,4 @@
+0.0.3
+- Add support for estouchy (nb skin folder must be writable, so e.g. Android devices probably need to be rooted...)
 0.0.2
 - Initial release
