Skin Patcher v0.0.6 - better logging and error notifications

--- a/staging/script.ozweather-skinpatcher/changelog.txt
+++ b/staging/script.ozweather-skinpatcher/changelog.txt
@@ -1,3 +1,5 @@
+0.0.6
+- Improve error logging and notifications
 0.0.5
 - Add support for estouchy (nb skin folder must be writable, so e.g. Android devices probably need to be rooted...)
 0.0.2
