--- a/staging/skin.confluence.bossanova808.matrix/changelog.txt
+++ b/staging/skin.confluence.bossanova808.matrix/changelog.txt
@@ -1,3 +1,3 @@
-[B]4.7.1201[/B]
+[B]4.7.608[/B]
 
-2021-02-27 Sync w. latest upstream Confluence and tweaks for Matrix
+2021-05-27 Updated MyWeather for forthcoming OzWeather BOM API update
