Skin Patcher 0.2.4 - user configurable colours, backgrounds/opacity

--- a/staging/script.ozweather-skinpatcher/changelog.txt
+++ b/staging/script.ozweather-skinpatcher/changelog.txt
@@ -1,3 +1,5 @@
+0.2.4
+- Add support for user choice of colours, and for aeon/amber background image, background opacity
 0.2.3
 - Tweaks, add support for xonfluence, and aeon skins
 0.1.9
