--- a/staging/skin.confluence.bossanova808.matrix/changelog.txt
+++ b/staging/skin.confluence.bossanova808.matrix/changelog.txt
@@ -1,3 +1,7 @@
+[B]4.7.615[/B]
+
+2022-01-22 Minor change to weather files
+
 [B]4.7.614[/B]
 
 2021-09-16 Merge uspstream/master (search button is moved)
