--- a/staging/skin.confluence.bossanova808.nexus/changelog.txt
+++ b/staging/skin.confluence.bossanova808.nexus/changelog.txt
@@ -1,3 +1,7 @@
+[B]4.7.1503[/B]
+
+Use the actual Confluence texture for subs location, and remove floor in a bunch more places
+
 [B]4.7.1502[/B]
 
 Start work on Nexus skin.
