Prep for changes in OzWeather 2.0.7

--- a/staging/skin.confluence.bossanova808.nexus/changelog.txt
+++ b/staging/skin.confluence.bossanova808.nexus/changelog.txt
@@ -1,3 +1,8 @@
+[B]4.7.1508[/B]
+
+Changes for OzWeather/ABC Video
+Auto hide video info on unpause
+
 [B]4.7.1507[/B]
 
 Sync upstream Nexus branch
