--- a/staging/script.ozweather-skinpatcher/changelog.txt
+++ b/staging/script.ozweather-skinpatcher/changelog.txt
@@ -1,3 +1,5 @@
+0.3.0
+- Make sure the ABC weather video link is always current just before playback
 0.2.9
 - Remove 'Rain' from 'Rain Chance' as some BOM short forecasts are not as short as short implies.
 0.2.8 
