Video node work
Tweak to Home.xml to make the main TV Shows button still show a sub menu when it's set to a playlist

Fetch languages from upstream, and remove all but English to reduce size

--- a/staging/skin.confluence.bossanova808.nexus/changelog.txt
+++ b/staging/skin.confluence.bossanova808.nexus/changelog.txt
@@ -1,5 +1,10 @@
 [B]4.7.1508[/B]
 
+Minor tweak to Home.xml so custom nodes work the way I want
+Remove non English languages
+
+[B]4.7.1508[/B]
+
 Changes for OzWeather/ABC Video
 Auto hide video info on unpause
 
