Backport & Fixes for Omega Confluence changes

--- a/staging/skin.confluence.bossanova808.nexus/changelog.txt
+++ b/staging/skin.confluence.bossanova808.nexus/changelog.txt
@@ -1,4 +1,8 @@
-[B]4.7.1508[/B]
+[B]4.7.1511[/B]
+
+Backport of Omega changes
+
+[B]4.7.1509[/B]
 
 Minor tweak to Home.xml so custom nodes work the way I want
 Remove non English languages
