--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,8 @@
+[B]4.7.1512[/B]
+
+Use new v21 tags for slider control's disabled appearance
+(https://github.com/xbmc/skin.confluence/pull/218)
+
 [B]4.7.1511[/B]
 
 Tweaks found in other Confluence repos
