--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,5 +1,9 @@
 [B]4.7.1512[/B]
 
+Christmas update, bump ABI to 5.17
+
+[B]4.7.1512[/B]
+
 Use new v21 tags for slider control's disabled appearance
 (https://github.com/xbmc/skin.confluence/pull/218)
 
