End of the festive season...

--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,6 +1,10 @@
+[B]4.7.1515[/B]
+
+End of festive season...
+
 [B]4.7.1512[/B]
 
-Christmas update, bump ABI to 5.17
+Christmas update
 
 [B]4.7.1512[/B]
 
