--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,7 @@
+[B]2024-04-07 - v5.0.301[/B]
+             
+Further minor fixes now Omega is released
+
 [B]2024-04-07 - v5.0.103[/B]
              
 Minor Fixes now Omega is released
