--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,7 @@
+[B]2024-04-10 - v5.0.305[/B]
+
+Add back Chapter / Channel Group text in new position
+
 [B]2024-04-10 - v5.0.304[/B]
 
 Merge in all the Omega changes from Hitcher to 2024-04-10
