Ozweather Skin Patcher 0.3.2 (Omega update) and Skin 5.0.306
Skin patcher now supports Confluence in the 1080p Omega version, and added Confluence Zeitgeist support as well.

--- a/staging/script.ozweather-skinpatcher/changelog.txt
+++ b/staging/script.ozweather-skinpatcher/changelog.txt
@@ -1,3 +1,5 @@
+0.3.2
+- Updates for Omega (Confluence 1080p, support A Confluence Zeitgeist)
 0.3.1
 - Add support for OSMC and numerous visual tweaks
 - Make the intro text first run only
