--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,7 @@
+[B]2024-04-10 - v5.0.308[/B]
+
+Remove jpg artifacts from main the background image
+
 [B]2024-04-10 - v5.0.307[/B]
 
 Integrate Hitcher's work on Check Previous Episode
