--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,7 @@
+[B]2024-04-10 - v5.0.310[/B]
+
+Add colorbutton
+
 [B]2024-04-10 - v5.0.309[/B]
 
 Improve, and remove jpg artfacts from main the background image
