Skin v5.0.401 - Remove border around unfocussed addon icons

--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,7 @@
+[B]2024-04-17 - v5.0.401[/B]
+
+Remove border around unfocussed addons
+
 [B]2024-04-17 - v5.0.312[/B]
 
 Add check for updates to home addons menu
