--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,111 +1,90 @@
-[B]2024-04-17 - v5.0.402[/B]
+v5.0.403 
+Add faster profile switching
 
+v5.0.402
 Update fanart/icon/screenshots
 
-[B]2024-04-17 - v5.0.401[/B]
+v5.0.402
+Update fanart/icon/screenshots
 
+v5.0.401
 Remove border around unfocussed addons
 
-[B]2024-04-17 - v5.0.312[/B]
-
+v5.0.312
 Add check for updates to home addons menu
 
-[B]2024-04-17 - v5.0.311[/B]
-
+v5.0.311
 Add cleaned up textures from sarbes
 
-[B]2024-04-10 - v5.0.310[/B]
-
+v5.0.310
 Add colorbutton
 
-[B]2024-04-10 - v5.0.309[/B]
-
+v5.0.309
 Improve, and remove jpg artfacts from main the background image
 
-[B]2024-04-10 - v5.0.307[/B]
-
+v5.0.307
 Integrate Hitcher's work on Check Previous Episode
 
-[B]2024-04-10 - v5.0.306[/B]
-
+v5.0.306
 Fix blade menu in OzWeather
 
-[B]2024-04-10 - v5.0.305[/B]
-
+v5.0.305
 Add back Chapter / Channel Group text in new position
 
-[B]2024-04-10 - v5.0.304[/B]
-
+v5.0.304
 Merge in all the Omega changes from Hitcher to 2024-04-10
 
-[B]2024-04-07 - v5.0.302[/B]
-             
+v5.0.302
 Further minor fixes now Omega is released
 
-[B]2024-04-07 - v5.0.103[/B]
-             
+v5.0.103
 Minor Fixes now Omega is released
 
-[B]2024-04-07 - v5.0.102[/B]
-             
+v5.0.102
 Hitcher Omega changes to 2024-04-07
 
-[B]2024-03-26 - v5.0.101[/B]
-
+v5.0.101
 Integrate Hitcher's Nexus changes up to 5.0.1
 Various b808 tweaks (reduce more white, tidy up VideoFullScreen/DialogSeekbar)
 Re-integrate standard Confluence weather for anyone not using OzWeather
 
-[B]4.8.0101[/B]
+v4.8.0101
+Integrate Hitcher's Nexus changes up to v4.8.01
 
-Integrate Hitcher's Nexus changes up to 4.8.01
-
-[B]4.7.1513[/B]
-
+v4.7.1513
 End of the festive season...
 
-[B]4.7.1512[/B]
-
+v4.7.1512
 It's beginning to feel a lot like Christmas...
 
-[B]4.7.1511[/B]
-
+v4.7.1511
 Backport of Omega changes
 
-[B]4.7.1509[/B]
-
+v4.7.1509
 Minor tweak to Home.xml so custom nodes work the way I want
 Remove non English languages
 
-[B]4.7.1508[/B]
-
+v4.7.1508
 Changes for OzWeather/ABC Video
 Auto hide video info on unpause
 
-[B]4.7.1507[/B]
-
+v4.7.1507
 Sync upstream Nexus branch
 
-[B]4.7.1506[/B]
-
+v4.7.1506
 Latest changes per the review of my PR to the 'real' Confluence
 https://github.com/xbmc/skin.confluence/pull/194
 
-[B]4.7.1505[/B]
-
+v4.7.1505
 Stop Artist Slideshow from cropping or warping images 
 
-[B]4.7.1504[/B]
-
+v4.7.1504
 Add Colour Picker
 Add new MyFavourites window
 Fixes for CULyrics
 
-[B]4.7.1503[/B]
-
+v4.7.1503
 Use the actual Confluence texture for subs location, and remove floor in a bunch more places
 
-[B]4.7.1502[/B]
-
+v4.7.1502
 Start work on Nexus skin.
-
