Skin v5.0.408, Skin Patcher 0.3.5
Skin - use a custom window approach for OzWeather - https://forum.kodi.tv/showthread.php?tid=376614

Skin Patcher - tidy ups, remove old files, and make all Weather.Property calls explicitly Weather(window).Property calls (in possible preparation for future work to change to this custom window approach for the skin patcher too?).

--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,6 @@
+v5.0.408
+OzWeather now uses a Custom Window approach so as to leave MyWeather.xml unmolested
+
 v5.0.407 
 Disable thumbnail label scrolling due to CoreElec performance issues - https://discourse.coreelec.org/t/amlogic-no-discussion/46663/606
 
