--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,6 @@
+v5.0.410 
+Add date released/aired to VideoFullScreen
+
 v5.0.409 
 Fix from upstream https://github.com/xbmc/skin.confluence/pull/273/commits/104ba4e2fce8f2f5121c5327b0c305b8092b480f
 
