--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,6 @@
+v5.0.412 
+Revert to old OzWeather approach due to issues with weather buttons in custom windows :( 
+
 v5.0.411 
 Tidy up some weather button stuff
 
