Skin v5.0.413 Fix Confluence Weather Blade Menu (and Skin Patcher too)

--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,6 @@
+v5.0.413 
+Fix Weather Blade Menu
+
 v5.0.412 
 Revert to old OzWeather approach due to issues with weather buttons in custom windows :( 
 
