--- a/staging/script.kodi.yoctodisplay/changelog.txt
+++ b/staging/script.kodi.yoctodisplay/changelog.txt
@@ -1,6 +1,14 @@
--v0.2.1
+v0.2.3
+Strip leading 0: etc from time remaining
+
+v0.2.2
+Force architecture on non Windows to 'armhf' (for Odroid CE)
+
+v0.2.1
 Prevent time remaining with PVR Timeshift 
--v0.2.0
+
+v0.2.0
 Rewrite for Python 3 / Kodi 19
--V0.0.1
+
+v0.0.1
 Initial Development
